# dynamic-string-type-in-c

./: CMakeLists.txt  Makefile  README.md  string_type.h
include/: string_type.h
lib/: string_type.c
src/: main.c
string_type/: CMakeLists.txt  string_type.c  string_type.h
unittests/: string_typetests.c  testResults
